# Job-Sync

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: README.md  build-portable.mjs  export-resume-pdf.mjs  stage-worker-runtime.mjs  tauri-build.mjs  verify-worker-runtime.mjs
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.release.json
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  lib.rs  main.rs  paths.rs  resume_pdf_support.rs  resume_pdf_template.rs  resume_text.rs  resume_workspace.rs  resume_workspace_tests.rs  resume_workspaces.rs  settings.rs  worker.rs
src-tauri/src/commands/: ai.rs  auth.rs  crawl.rs  export.rs  jobs.rs  mod.rs  resume_workspace.rs  settings.rs
src-tauri/src/commands/ai/: config.rs  models.rs  profile_analysis.rs  report_meta.rs  reports.rs  resume_analysis.rs  shared.rs  worker.rs
src-tauri/src/commands/jobs/: models.rs  mutations.rs  queries.rs  shared.rs
src-tauri/src/db/: migrate.rs  mod.rs  models.rs  schema.sql  tests.rs
src-tauri/src/db/models/: common.rs  job_fields.rs  jobs.rs  source_links.rs
src-tauri/src/ipc/: mod.rs  protocol.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/src/storage/: mod.rs
src/lib/: README.md  aiReport.ts  aiReportsMeta.ts  aiSelection.ts  crawl.ts  jobs.ts  jobsPageHelpers.ts  protocol.ts  resumeWorkspace.ts  runtime.ts  sidecar.ts  tauri.ts  useAiReportsPage.ts  useCopy.ts  useCrawlPage.ts  useJobsPage.ts  useResumeWorkspacePage.ts  useResumeWorkspaceStore.ts
(+47 files in other folders)
